fix: make star-background appear behind title

--- a/src/assets/star-background.sass
+++ b/src/assets/star-background.sass
@@ -44,6 +44,7 @@ $shadows-big: multiple-box-shadow(100, $STAR_WIDTH, $STAR_WIDTH_UNIT, $STAR_HEIG
     background: transparent
     position: absolute
     // animation-delay: 2s
+    z-index: -1
 
 .small
     @extend .star-background
